Trunk only (unreleased)

  New Features

    - Content: Added IFactory utilities for all content classes.
      They are now used by default instead of the old constructor methods.

    - FactoryTypeInformation: Added support for Zope3 style factories.
      If the 'product' property of a type info instance is empty the 'factory'
      property is interpreted as an IFactory name.

  Bug Fixes

    -

  Others

    - Content: All content classes are now registered by ZCML.
      ContentInit is still used to register oldstyle constructors.

    - Favorite: Added 'handleFavoriteAddedEvent' subscriber.
      This replaces the 'manage_afterAdd' hook and some code in 'addFavorite'.

    - CMFCatalogAware: Added 'handleObjectEvent' subscriber.
      This replaces the deprecated 'manage_afterAdd', 'manage_afterClone' and
      'manage_beforeDelete' hooks.

    - setup handlers: Removed support for CMF 1.5 CMFSetup profiles.

CMF 2.0.x

  For a complete list see CHANGES.txt of the 2.0 branch.

CMF 1.6.x and previous

  For a complete list of changes see HISTORY.txt.